커뮤니티 기능 개말

--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -235,11 +235,11 @@
    		list.forEach( function (exhibit) {
    			
    			strHtml += '<div class="exhint_row" id="exhibit_'+ exhibit.comtSq +'">';
-   	        strHtml += '    <div class="exhint_list_img"><img src="'+ exhibit.comtImgUrl +'" onclick="opneExhibitDetail('+ exhibit.comtSq +')" style="cursor: pointer;" alt=""></div>';
+   	        strHtml += '    <div class="exhint_list_img"><img src="'+ exhibit.comtImgUrl +'" onclick="opneExhibitDetail('+ exhibit.comtSq +', '+ exhibit.mbrSq +', \'EXH\')" style="cursor: pointer;" alt=""></div>';
    	        strHtml += '    <div class="contents">';
    	        strHtml += '        <ul>';
    	        
-   	     	strHtml += '			<div onclick="opneExhibitDetail('+exhibit.comtSq+');" style="cursor: pointer;">';
+   	     	strHtml += '			<div onclick="opneExhibitDetail('+ exhibit.comtSq +', '+ exhibit.mbrSq +', \'EXH\');" style="cursor: pointer;">';
    	        strHtml += '            	<li>';
    	        strHtml += '                	<div class="tit">';
    	        strHtml += '                    	<em>'+ exhibit.comtTitle +'</em><div class="ico_new">NEW</div>';
@@ -283,8 +283,16 @@
         $("#listBox").prepend(strHtml);
    	}
    	
-   	function opneExhibitDetail(sqNumber){
-		location.href = "/community/exhibitDetail?comtSq="+sqNumber;
+   	function opneExhibitDetail(comtSq, mbrSq, cmtType){
+   		pageGoPost({
+			url: "/community/exhibitDetail",
+			target:"_self",
+			vals:[
+				["mbrSq", mbrSq],
+				["comtSq", comtSq],
+				["comtTypCd", cmtType]
+			]
+		});
 	}
 
    	// ajax로 공통코드 들고와서 뿌려주기
