--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
@@ -299,9 +299,10 @@
 	    			        processData : false,
 	    			        success: function(data) {
 	    			        	if(data == 1){
-	    			        		modalAlertShow("전시후기/소개 등록되었습니다.", "myexhibitList");
+	    			        		modalAlertShow("전시후기/소개 등록되었습니다.");
+	    			        		location.href = "/community/exhintList";
 	    			        	}else{
-	    			        		modalAlertShow("전시후기/소개 등록에 실패했습니다. 다시 시도해주세요.", "myexhibitList");
+	    			        		modalAlertShow("전시후기/소개 등록에 실패했습니다. 다시 시도해주세요.");
 	    			        	}
 	    			        },
 	    			        error: function(error) {
