--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -103,7 +103,7 @@
             <div class="mypage_contents">
                 <div class="contents_left">
                   <div class="myinfo_wrap">
-                    <div class="myinfo_pic"></div>
+                    <div class="myinfo_pic" style="background-image: url('https://item.kakaocdn.net/do/8d209a3c00ed5f23eeaa3758a1c7d59c339e41ce89b663315d96faecd7cfd11b')"></div>
                     <div class="myinfo_con">
                       <ul>
                         <li class="name">Dealing - Art <span></span></li>
@@ -132,30 +132,32 @@
                   <div class="left_nav">
                     <ul>
                       <li class="on"><a href="#">마이페이지</a>
-                        <ul>
-                          <li><a href="#">모두보기</a></li>
-                          <li><a href="#">나의 작품</a></li>
-                          <li><a href="#">자랑하기</a></li>
-                          <li><a href="#">전시후기&소개</a></li>
-                          <li><a href="#">이슈</a></li>
-                          <li><a href="#">알림함</a></li>
-                          <li><a href="#">스크랩</a></li>
-                          <li><a href="#">팔로잉</a></li>
-                        </ul>
                       </li>
-                      <li><a href="#">거래</a></li>
-                      <li><a href="#">작가</a></li>
-                      <li><a href="#">나의 정보</a></li>
+                      <li>
+	                      <ul>
+	                          <li><a href="#">모두보기</a></li>
+	                          <li><a href="#">나의 작품</a></li>
+	                          <li><a href="#">자랑하기</a></li>
+	                          <li><a href="#">전시후기&소개</a></li>
+	                          <li><a href="#">이슈</a></li>
+	                          <li><a href="#">알림함</a></li>
+	                          <li><a href="#">스크랩</a></li>
+	                          <li><a href="#">팔로잉</a></li>
+	                        </ul>
+                       </li>
+                      <li class="off"><a href="#">거래</a></li>
+                      <li class="off"><a href="#">작가</a></li>
+                      <li class="off"><a href="#">나의 정보</a></li>
                     </ul>
                   </div>
                 </div>
                 <div class="contents_right">
                   <div class="mypage_works_wrap">
                     <div class="tit_wrap">
-                        <h2>나의 작품 <span>99</span></h2>
+                        <h2>나의 작품 <span id="myWorksTotal">99</span></h2>
                         <button class="btn_more">더보기</button>
                     </div>
-                    <ul>
+                    <ul id="myWorks">
                         <li>
                           <a href="#"><img src="/resources/img/img_new/sample_works01.jpg" alt=""></a>
                         </li>
@@ -164,15 +166,15 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_works03.jpg" alt=""></a>
-                        </li>                        
+                        </li>     
                       </ul>
                   </div>
                   <div class="mypage_showingoff_wrap">
                     <div class="tit_wrap">
-                        <h2>자랑하기 <span>99</span></h2>
+                        <h2>자랑하기 <span id="myBoastTotal">99</span></h2>
                         <button class="btn_more">더보기</button>
                     </div>
-                    <ul>
+                    <ul id="myBoast">
                         <li>
                           <a href="#"><img src="/resources/img/img_new/sample_works05.jpg" alt=""></a>
                         </li>
@@ -190,7 +192,9 @@
                             <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개</span><em>+99</em></h2>
                             <button class="btn_more">더보기</button>
                         </div>
-                        <ol>
+                        <ol id="myExhbn">
+                            <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
+                            <li><a href="#">희망을 주는 그림</a><em></em></li>
                             <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
                             <li><a href="#">희망을 주는 그림</a><em></em></li>
                         </ol>
@@ -202,7 +206,9 @@
                             <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em>+99</em></h2>
                             <button class="btn_more">더보기</button>
                         </div>
-                        <ol>
+                        <ol id="myIssue">
+                            <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
+                            <li><a href="#">도자기 보관 방법</a><em></em></li>
                             <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
                             <li><a href="#">도자기 보관 방법</a><em></em></li>
                         </ol>
@@ -260,5 +266,149 @@
         </div>
     </div>
     <th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
+    <script type="text/javascript">
+    
+    $("document").ready(function(){
+    	$.ajax({
+			type: "POST"
+			, url: "/myPage/main/myInfo"
+			, success: function(data){
+				setMyInfo(data.myInfo);
+				setMyWorks(data.myWorks, data.myWorksTotal);
+				setMyBoast(data.myBoast, data.myBoastTotal);
+				setMyExhbn(data.myExhbn);
+			}
+			, error: function(data){
+				alert("오류 발생" + error);
+			}
+		});
+    });
+    
+    function setMyInfo(data){
+    		
+    	var html = '';
+    	//회원 프로필 사진 유무
+    	if(data.mbrProfileImgUrl != null && data.mbrProfileImgUrl != ""){
+    		html += '<div class="myinfo_pic" style="background-image: url('+data.mbrProfileImgUrl+')"></div>';
+    	}else{
+    		html += '<div class="myinfo_pic"></div>';
+    	}
+        html += '<div class="myinfo_con">';
+        html += '  <ul>';
+        html += '    <li class="name">'+data.mbrNcknm+'<span></span></li>';
+        html += '    <li class="email">'+data.mbrId+'</li>';
+        html += '    <li class="mem_type">회원유형<span>'+data.mbrTypNm+'</span></li>';
+        html += '    <li class="line"></li>';
+        html += '    <li class="profile_modify"><a href="#"><span></span>프로필 수정</a></li>';
+        html += '  </ul>';
+        html += '</div>';
+        html += '<div class="icon_box">';
+        html += '  <ul>';
+        html += '      <li><p class="ico_scrap"></p>스크랩<br><span>'+data.mbrScraps+'</span></li>';
+        html += '      <li><p class="ico_good"></p>좋아요<br><span>'+data.mbrLikes+'</span></li>';
+        html += '      <li><p class="ico_alarm"></p>알림<br><span>'+data.mbrNotis+'</span></li>';
+        html += '  </ul>';
+        html += '</div>';
+        html += '<div class="icon_sns_box">';
+        html += '  <ul>';
+        //회원 페이스북 url 유무
+        if(data.mbrFacebookUrl != null && data.mbrFacebookUrl != ""){
+        	html += '    <li><a href="'+data.mbrFacebookUrl+'"><p class="ico_facebook"></p></a></li>';
+        }
+        //회원 인스타그램 url 유무
+        if(data.mbrInstarUrl != null && data.mbrInstarUrl != ""){
+        	html += '    <li><a href="'+data.mbrInstarUrl+'"><p class="ico_instagram"></p></a></li>';
+        }
+        //회원 유투브 url 유무
+        if(data.mbrYoutubeUrl != null && data.mbrYoutubeUrl != ""){
+        	html += '    <li><a href="'+data.mbrYoutubeUrl+'"><p class="ico_youtube"></p></a></li>';
+        }
+        //회원 트위터 url 유무
+        if(data.mbrTwitterUrl != null && data.mbrTwitterUrl != ""){
+        	html += '    <li> <a href="'+data.mbrTwitterUrl+'"><p class="ico_twitter"></p></a></li>';
+        }
+        html += '  </ul>';
+        html += '</div>';
+        $(".myinfo_wrap").empty();
+        $(".myinfo_wrap").append(html).trigger("create");
+    }
+    
+    function setMyWorks(data, total){
+    	var html = '';
+    	if(total > 0){
+        	for(i=0; i<data.length; i++){
+                if(i == 2){
+                	html += '<li class="pic_more">';
+                    html += '  	<a href="/deal/workDetail?SqNumber='+data[i].workSq+'">';
+                    html += '		<span>+ '+total+'</span>';
+                    html += '		<img src="'+data[i].workMainImgUrl+'">';
+                    html += '	</a>';
+                    html += '</li>';
+                }else{
+                	html += '<li>';
+                    html += '	<a href="/deal/workDetail?SqNumber='+data[i].workSq+'">';
+                    html += '		<img src="'+data[i].workMainImgUrl+'">';
+                    html += '	</a>';
+                    html += '</li>';
+                }
+        	}
+        	$("#myWorks").empty();
+            $("#myWorks").append(html).trigger("create");
+            $("#myWorksTotal").text(total);
+    	}else{
+    		$(".mypage_works_wrap").hide();
+    	}
+    }
+    
+    function setMyBoast(data, total){
+    	var html = '';
+    	if(total > 0){
+        	for(i=0; i<data.length; i++){
+                if(i == 2){
+                	html += '<li class="pic_more">';
+                    html += '  	<a href="/deal/workDetail?SqNumber='+data[i].comtSq+'">';
+                    html += '		<span>+ '+total+'</span>';
+                    html += '		<img src="'+data[i].comtImgUrl+'">';
+                    html += '	</a>';
+                    html += '</li>';
+                }else{
+                	html += '<li>';
+                    html += '	<a href="/deal/workDetail?SqNumber='+data[i].comtSq+'">';
+                    html += '		<img src="'+data[i].comtImgUrl+'">';
+                    html += '	</a>';
+                    html += '</li>';
+                }
+        	}
+        	$("#myBoast").empty();
+            $("#myBoast").append(html).trigger("create");
+            $("#myBoastTotal").text(total);
+    	}else{
+    		$(".mypage_showingoff_wrap").hide();
+    	}
+    }
+    
+    function setMyExhbn(data){
+    	var html = '';
+    	if(total > 0){
+        	for(i=0; i<data.length; i++){
+                if(data[i].cmtTotal > 0){
+                    html += '<li>';
+                    html += '	<a href="#">'+data[i].comtTitle+'</a>';
+                    html += '	<em>['+data[i].totalCmt+']</em>';
+                    html += '</li>';
+                }else{
+                	html += '<li>';
+                    html += '	<a href="#">'+data[i].comtTitle+'</a>';
+                    html += '</li>';
+                }
+        	}
+        	$("#myExhbn").empty();
+            $("#myExhbn").append(html).trigger("create");
+    	}else{
+    		$(".mypage_showingoff_wrap").hide();
+    	}
+    }
+
+    </script>
 </body>
 </html>
