--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -120,7 +120,7 @@
 				
 				<!-- 로그인후 -->
 				<div class="login-show h-img" id="loginAf" style="display:none;">
-					<span class="sog-1"><a href="javascript:void(0);" class="myCollection"><img src="/resources/img/icon-2.png" /></a></span>
+					<span class="sog-1"><a href="javascript:void(0);" class="myWorkList"><img src="/resources/img/icon-2.png" /></a></span>
 					<!-- <span class="sog-2 lg-my"><a href="javascript:void(0);"><img src="/resources/img/tablet/icon-3.png" /></a></span> -->
 					<span class="sog-2 lg-my"><a href="javascript:void(0);"><img src="/resources/img/tablet/icon-3.png" /></a></span>
 					
