--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -110,34 +110,35 @@
                 </ul>
             </div>
             <div class="input_wrap">
-                <div class="input_cal ml10" style="display: inline; position: static;">
-                	<span>기간검색</span>
+                <div class="input_cal" style="display: inline; position: static;">
                 	<input type="date" id="startDate" onchange="checkCalendar()">
                 	<span>~</span>
                 	<input type="date" id="endDate" onchange="checkCalendar()">
+                	<div class="sel_sorting">
+	                    <select class="exhSelectBox" name="comtSort" id="comtSort">
+	                        <option value="">정렬</option>
+	                        <option value="newest">최신순</option>
+	                        <option value="byRecentPopularity">최근 인기 순</option>
+	                        <option value="allTimePopularity">역대 인기 순</option>
+	                        <option value="pastOrder">과거 순</option>
+	                    </select>
+	                </div>
+                    <div class="sel_form">
+	                    <select class="exhSelectBox" name="exhibitRegionCd" id="exhibitRegionCd">
+	                        <option value="">지역</option>
+	                    </select>
+	                </div>
+	                <div class="sel_form">
+	                    <select class="exhSelectBox" name="exhibitTypCd" id="exhibitTypCd">
+	                        <option value="">구분</option>
+	                    </select>
+	                </div>
                 </div>
             </div>
-            <div class="notice">
+            <div class="notice dp-flex">
                 <div class="tit">공 지</div>
-                <div class="contents">작품자랑 작성 가이드 라인 ver 1.0</div>
-                <div class="sel_sorting">
-                    <select class="exhSelectBox" name="comtSort" id="comtSort">
-                        <option value="">정렬</option>
-                        <option value="newest">최신순</option>
-                        <option value="byRecentPopularity">최근 인기 순</option>
-                        <option value="allTimePopularity">역대 인기 순</option>
-                        <option value="pastOrder">과거 순</option>
-                    </select>
-                </div>
-                <div class="sel_form">
-                    <select class="exhSelectBox" name="exhibitRegionCd" id="exhibitRegionCd">
-                        <option value="">지역</option>
-                    </select>
-                </div>
-                <div class="sel_form">
-                    <select class="exhSelectBox" name="exhibitTypCd" id="exhibitTypCd">
-                        <option value="">구분</option>
-                    </select>
+                <div class="contents mt0">
+                	<div>작품자랑 작성 가이드 라인 ver 1.0</div>
                 </div>
             </div>
             <div class="exhint_wrap" id="listBox">
@@ -183,7 +184,6 @@
    			obj[id] = $(this).val();
    			offset = 0;
    			nowPage = 0;
-   			$("#listBox .exhint_row").empty();
    			communityExhibitList();
    		});
 
@@ -197,7 +197,6 @@
    		if(startDate != '' && endDate != ''){
    			offset = 0;
    			nowPage = 0;
-   			$("#listBox .exhint_row").empty();
    			communityExhibitList();
    		}
    	}
@@ -228,14 +227,13 @@
    	
    	// 전시후기/소개 뿌려주기
    	function setExhibitHtml(list){
-   		
    		var strHtml = '';
    		
    		window.scrollTo({top:0});
    		list.forEach( function (exhibit) {
    			
    			strHtml += '<div class="exhint_row" id="exhibit_'+ exhibit.comtSq +'">';
-   	        strHtml += '    <div class="exhint_list_img"><img src="'+ exhibit.comtImgUrl +'" onclick="opneExhibitDetail('+ exhibit.comtSq +', '+ exhibit.mbrSq +', \'EXH\')" style="cursor: pointer;" alt=""></div>';
+   	        strHtml += '    <div class="exhint_list_img"><img src="'+ exhibit.comtImgUrl +'" class="img-fit-contain" onclick="opneExhibitDetail('+ exhibit.comtSq +', '+ exhibit.mbrSq +', \'EXH\')" style="cursor: pointer;" alt=""></div>';
    	        strHtml += '    <div class="contents">';
    	        strHtml += '        <ul>';
    	        
@@ -245,12 +243,10 @@
    	        strHtml += '                    	<em>'+ exhibit.comtTitle +'</em><div class="ico_new">NEW</div>';
    	        strHtml += '                	</div>';
    	        strHtml += '            	</li>';
-   	        strHtml += '            	<li class="pt20 height114">';
-   	        strHtml += '            		<p>'+ exhibit.comtContent +'</p></li>';
-   	        strHtml += '            	</li>';
+   	        strHtml += '            	<li class="comt_content pt20">'+ exhibit.comtContent +'</li>';
    	        strHtml += '            </div>';
    	        
-   	        strHtml += '            <li>';
+   	        strHtml += '            <li class="comt-row-info">';
    	        strHtml += '                <div class="user_wrap">';
    	        strHtml += '                    <div class="user">';
    	        strHtml += '                        <ul>';
@@ -280,7 +276,36 @@
    	        
    		});
    		
+   		$("#listBox .exhint_row").remove();
         $("#listBox").prepend(strHtml);
+   		setContentText($(".comt_content"));
+   	}
+   	
+   	// 작성 글 내용 텍스트만 가져오기
+   	function setContentText(content) {
+   		// ck에디터 태그 제외하기 위한 정규식
+   		var regex = /ck-/;
+   		
+   		$.each(content, function(idx, item) {
+   			var childTags = $(item).children();
+   			var text = "";
+   			
+   			$.each(childTags, function(idx, item) {
+   				var tagClasses = $(item).attr("class");
+   				
+   				// 클래스가 있을 경우
+   				if(tagClasses) {
+   					// ck-로 시작하는 클래스명이 없을 경우 텍스트를 가져옴
+   					if(tagClasses.search(regex) === -1) {
+   						text += $(item).text();
+   					}
+   				} else {
+   					text += $(item).text();
+   				}
+   			});
+   			
+   			$(item).html(text);
+   		});
    	}
    	
    	function opneExhibitDetail(comtSq, mbrSq, cmtType){
